Corrected incorrect typing of visible

--- a/photo_viewer.css
+++ b/photo_viewer.css
@@ -55,6 +55,6 @@ span:hover {
 /* Sets visibility property back to visible.
  - shows drop-down menus ONLY when user clicks main menu item */
 .show {
-  visibility: visibile; 
+  visibility: visible; 
 }
 
